@@ -156,6 +156,7 @@ define('AGENT_STATUS_NORMAL', 0);
 define('AGENT_STATUS_NOT_INIT', 5);
 define('AGENT_STATUS_NOT_NORMAL', 6);
 define('AGENT_STATUS_UNKNOW', 3);
+define('AGENT_STATUS_ALERT_FIRED', 4);
 define('AGENT_STATUS_WARNING', 2);
 
 /* Visual maps contants */
